# bridgecommand

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
CMake/: SourceFileUtils.cmake
controller/: CMakeLists.txt  ControllerModel.cpp  EventReceiver.cpp  GUI.cpp  GUI.hpp  Network.cpp  Network.hpp  OtherShipDataStruct.hpp  main.cpp
dependencies/Irrlicht/irrlicht-ogl-es/: changes.txt
dependencies/Irrlicht/irrlicht-ogl-es/include/: IEventReceiver.h  IImage.h  IrrCompileConfig.h  irrMath.h
dependencies/Irrlicht/irrlicht-ogl-es/source/Irrlicht/: CEGLManager.cpp  CFileSystem.cpp  CGLXManager.h  CIrrDeviceLinux.cpp  CIrrDeviceWin32.cpp  CNullDriver.cpp  COGLES2Driver.cpp  COGLESDriver.cpp  COpenGLCoreCacheHandler.h  COpenGLDriver.cpp  CSoftwareDriver2.cpp  CTerrainSceneNode.cpp  CWebGL1Driver.cpp  IAttribute.h  Makefile
dependencies/Irrlicht/irrlicht-svn/: CMakeLists.txt  changes.txt
dependencies/Irrlicht/irrlicht-svn/CMake/: FindDirectX.cmake
dependencies/Irrlicht/irrlicht-svn/source/Irrlicht/: CDefaultSceneNodeFactory.cpp  CFileSystem.cpp  CGeometryCreator.cpp  CMeshManipulator.cpp  COctreeSceneNode.h  CTerrainSceneNode.cpp  Irrlicht14.0.vcxproj  os.cpp
dependencies/Irrlicht/irrlicht-svn/source/Irrlicht/jpeglib/: jmorecfg.h
dependencies/enet/: CMakeLists.txt
dependencies/serial/: CMakeLists.txt
editor/: CMakeLists.txt  ControllerModel.cpp  ControllerModel.hpp  EventReceiver.cpp  GUI.cpp  GUI.hpp  GeneralDataStruct.hpp  Network.cpp  Network.hpp  OtherShipDataStruct.hpp  main.cpp
etc/: icon.aps
iniEditor/: CMakeLists.txt  main.cpp
launcher/: CMakeLists.txt  main.cpp
multiplayerHub/: CMakeLists.txt  Network.cpp  Network.hpp  ScenarioChoice.cpp  ScenarioChoice.hpp  ShipPositions.cpp  main.cpp
repeater/: CMakeLists.txt  ControllerModel.cpp  EventReceiver.cpp  GUI.cpp  GUI.hpp  Network.cpp  Network.hpp  main.cpp
source/: CMakeLists.txt  MovingWater.cpp  MovingWater.hpp  NMEA.hpp  NavLight.cpp  Network.hpp  NetworkPrimary.hpp  NetworkSecondary.hpp
